	* src/nano.c (delete_opennode): Plug a small memory leak.
	* src/files.c (do_lockfile): Rename a variable; it does not contain
	the size of the file but the size of the name.
	* src/nano.c (do_toggle): Elide an unneeded variable.
	* src/files.c: Unwrap some lines and rewrap some others in a more
	congenial manner; tweak some comments and whitespace and braces.

2015-07-06  Benno Schulenberg  <bensberg@justemail.net>
	* src/global.c (add_to_sclist), src/help.c (help_init), src/nano.h,
	src/rcfile.c (parse_binding): When defining the toggles, give each
	of them a sequence number, so that, when they are rebound, they can
	still be listed in the original order in the help text.
	* src/text.c (do_undo): Make it clearer what WAS_FINAL_BACKSPACE does.
	* src/text.c (add_undo, do_deletion): Move the check for a Delete at
	the end-of-file to a less frequently travelled path.
	* src/text.c (do_deletion): If a Backspace happens at the end-of-file,
	don't remove and then re-add the magic line; just add an undo item.
	* src/help.c (help_init), src/text.c (do_undo): Adjust whitespace and
	bracing after the previous changes.

GNU nano 2.4.2 - 2015.07.05
2015-06-28  Benno Schulenberg  <bensberg@justemail.net>
	* src/browser.c (browser_refresh): Limit the selected file to the
	available ones in the list -- after a refresh the number may have
	decreased.  This fixes Savannah bug #45424.
	* src/text.c (do_deletion): There is no need to check again for the
	line ending -- it was done already in the encompassing 'if'.
	* src/text.c: Unwrap some lines, rewrap some others more logically,
	plus several other esthetic tweaks.
	* doc/syntax/xml.nanorc: Recognize many more kinds of XML files.
	This addresses Debian bug #790017 reported by Emmanuel Bourg.
	Also colour the strings in tags differently, and add some comments.

2015-06-27  Benno Schulenberg  <bensberg@justemail.net>
	* src/text.c (do_undo, add_undo): Skip undoing a backspace *only* when